20240627-120909：正式命名为：mod版和mop版。

--- a/rime/default.custom.yaml
+++ b/rime/default.custom.yaml
@@ -7,8 +7,8 @@ customization:
 patch:
   schema_list:
     - {schema: pinyin_simp}
-    - {schema: zzdyx_mini}
     - {schema: zzdyx_mod}
+    - {schema: zzdyx_mop}
     - {schema: zzdyx_perfect}
     - {schema: zzdyx_single}
   switcher:
