--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,6 +1,7 @@
 var:
-  last_build_time: 1719461306
+  last_build_time: 1719508164
   previously_selected_schema: zzdyx_mod
   schema_access_time:
-    zzdyx_mod: 1719461309
+    xhup: 1719469943
+    zzdyx_mod: 1719509469
     zzdyx_mop: 1719461120
