--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -31783,8 +31783,8 @@ GPRS	gprs
 瀚	hdfj
 货到付款	hdfk
 洪福	hdfl
-河粉	hdfm
 洪	hdfm
+河粉	hdfm
 洪峰	hdfo
 潢	hdfo
 画舫	hdfq
@@ -46370,7 +46370,6 @@ GPRS	gprs
 激发	jdfz
 酒疯子	jdfz
 浅	jdg
-军队干部	jdgb
 酒柜	jdgc
 浇灌	jdgd
 汫	jdgi
@@ -67136,8 +67135,8 @@ GPRS	gprs
 马厩	mxja
 母机	mxjc
 母鸡	mxjl
-马具	mxjo
 马甲	mxjo
+马具	mxjo
 母舰	mxjq
 马脚	mxjv
 马驹	mxjx
@@ -128182,7 +128181,7 @@ Z	vyz
 违反	wgfq
 外感风热	wgfr
 无妨	wgfs
-无非是	wgfs
+王妃	wgfs
 违犯	wgfw
 无缝	wgfx
 无风险	wgfx
@@ -142238,8 +142237,8 @@ Z	vyz
 吟咏	yiyi
 喑哑	yiyi
 悠哉游哉	yiyi
-呓语	yiyl
 哑语	yiyl
+呓语	yiyl
 言之有理	yiyl
 咽炎	yiym
 有朝一日	yiyr
