--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,7 +1,7 @@
 var:
-  last_build_time: 1719508164
-  previously_selected_schema: zzdyx_mod
+  last_build_time: 1719593794
+  previously_selected_schema: zzdyx_mop
   schema_access_time:
     xhup: 1719469943
-    zzdyx_mod: 1719509469
-    zzdyx_mop: 1719461120
+    zzdyx_mod: 1719593804
+    zzdyx_mop: 1719594830
