--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -5602,6 +5602,7 @@ bilibili	blbl
 兵役局	bryj
 兵役	bryk
 鼻翼	bryl
+白眼狼	bryl
 鼻炎	brym
 白羊	brym
 白云母	brym
@@ -68800,6 +68801,7 @@ GPRS	gprs
 农工党	nlgd
 难过	nlgf
 能干	nlgg
+农耕	nlgg
 难搞	nlgk
 难关	nlgm
 难怪	nlgn
@@ -119487,14 +119489,12 @@ QQ密码	qqmm
 天理人情	tlru
 讨饶	tlrw
 讨人嫌	tlrx
-同龄人中	tlrz
 调色板	tlsb
 通水	tlsd
 调速	tlsf
 通商	tlsh
-台式机	tlsj
-脱离实际	tlsj
 通俗	tlsj
+台式机	tlsj
 调摄	tlsk
 调试	tlsl
 通识	tlsl
@@ -119502,7 +119502,6 @@ QQ密码	qqmm
 通史	tlso
 通顺	tlsr
 台式	tlss
-同卵双生	tlss
 通式	tlss
 调适	tlst
 谭嗣同	tlst
@@ -125796,7 +125795,6 @@ QQ密码	qqmm
 气短	utdt
 千岛	utdw
 秋冬	utdw
-千多元	utdy
 缺点	utdy
 缺额	uten
 乞儿	utew
@@ -132665,11 +132663,10 @@ Z	vyz
 洗钱	xdqy
 溴	xdr
 溴	xdra
-洗染	xdrd
-洗染店	xdrd
-洫	xdrd
-消融	xdrd
 渲染	xdrd
+消融	xdrd
+洗染	xdrd
+洫	xdrd
 泄热	xdrk
 涎	xdrl
 澙	xdrs
@@ -138056,15 +138053,13 @@ Z	vyz
 骁将	xxjh
 细嚼	xxji
 细菌战	xxji
+续集	xxjj
 循序渐进	xxjj
 续借	xxjj
-续集	xxjj
 飨	xxjl
 细究	xxjn
-学习技巧	xxjq
 小心谨慎	xxjs
 雄性激素	xxjs
-学习技巧	xxju
 绡	xxjv
 乡级	xxjx
 细菌学	xxjx
@@ -139264,7 +139259,7 @@ Z	vyz
 异质	ybiq
 玉不琢不成器	ybiq
 引自	ybir
-引致	ybis
+以彼之道，还施彼身	ybis
 已知	ybit
 引种	ybit
 已走	ybiu
@@ -139488,7 +139483,7 @@ Z	vyz
 异质	ybzq
 玉不琢不成器	ybzq
 引自	ybzr
-引致	ybzs
+以彼之道，还施彼身	ybzs
 已知	ybzt
 引种	ybzt
 已走	ybzu
@@ -141776,6 +141771,7 @@ Z	vyz
 迂回曲折	yhqi
 衣裙	yhql
 疫情	yhqn
+言情	yhqn
 夜曲	yhqo
 疫区	yhqs
 意气	yhqt
@@ -141851,6 +141847,7 @@ Z	vyz
 迂回曲折	yhui
 衣裙	yhul
 疫情	yhun
+言情	yhun
 夜曲	yhuo
 疫区	yhus
 意气	yhut
@@ -142876,8 +142873,8 @@ Z	vyz
 衍生品	yksp
 扬声器	yksq
 衍射	yksr
-忆苦思甜	ykst
 衍生	ykst
+忆苦思甜	ykst
 扬声器	yksu
 御膳	yksv
 掩饰	yksw
