--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -31487,7 +31487,6 @@ GPRS	gprs
 横财	hcco
 桦川	hccr
 横陈	hccv
-货车车厢	hccx
 桓	hcd
 核弹	hcdb
 核蛋白	hcdb
@@ -31497,8 +31496,8 @@ GPRS	gprs
 核大国	hcdg
 核电站	hcdi
 核打击	hcdj
-核动力	hcdl
 核对	hcdl
+核动力	hcdl
 横断	hcdm
 核定	hcdn
 核电	hcdo
@@ -32139,7 +32138,6 @@ GPRS	gprs
 混为	hdwm
 涣	hdwo
 活物	hdwt
-核对无误	hdww
 海外	hdww
 海王星	hdwx
 化敌为友	hdwy
@@ -33328,7 +33326,6 @@ GPRS	gprs
 壶中日月	hiry
 号	his
 喝水	hisd
-火灾事故	hisg
 呼哨	hisi
 哈萨克	hisk
 呼扇	hisl
@@ -35343,7 +35340,6 @@ GPRS	gprs
 航空兵	hqkb
 后空翻	hqkf
 航空港	hqkg
-行情看好	hqkh
 航空局	hqkj
 航空	hqkn
 航空器	hqkq
@@ -35374,7 +35370,6 @@ GPRS	gprs
 后脑勺	hqns
 后年	hqnt
 后脑	hqnv
-后怕虎	hqph
 后排座	hqpi
 后排	hqpk
 航炮	hqpm
@@ -35928,10 +35923,8 @@ GPRS	gprs
 好强	hsqb
 好去处	hsqc
 划清	hsqd
-好巧	hsqf
-好求	hsqf
-婚娶	hsqf
 婚期	hsqf
+好巧	hsqf
 好球	hsqg
 婚庆	hsqh
 横扫千军	hsqj
@@ -35948,9 +35941,6 @@ GPRS	gprs
 好人	hsrj
 好人家	hsrj
 好热	hsrk
-互认	hsrl
-互让	hsrl
-或然率	hsrl
 鼾声如雷	hsrl
 划入	hsrm
 好软	hsrs
@@ -35983,16 +35973,14 @@ GPRS	gprs
 划算	hsst
 好胜	hssv
 好色	hssw
-好书	hssx
-婚书	hssx
 婚纱	hssx
+婚书	hssx
 活色生香	hssx
 浑身上下	hssx
 划上	hssy
 含沙射影	hssy
 好事者	hssz
 婚纱照	hssz
-好天	hstg
 好痛	hsth
 好听	hsti
 画蛇添足	hsti
@@ -36024,6 +36012,7 @@ GPRS	gprs
 好	hsvd
 婚	hsw
 华氏温度	hswd
+℉	hswd
 好玩儿	hswe
 好恶	hswf
 好玩	hswg
@@ -36264,9 +36253,7 @@ GPRS	gprs
 坏	huak
 赫本	hubf
 坏病	hubh
-后勤保障	hubi
 寒气逼人	hubr
-后勤保障	hubz
 浩气长存	hucc
 活期存款	huck
 坏处	hucw
@@ -36308,7 +36295,6 @@ GPRS	gprs
 坏疽	hujh
 划清界线	hujx
 划清界限	hujx
-行情看好	hukh
 壶口	huki
 壶	hul
 恚	hulk
@@ -36537,7 +36523,6 @@ GPRS	gprs
 昏睡	hwso
 猢狲	hwsw
 海外同胞	hwtb
-海外推广	hwtg
 昏头	hwtn
 馄饨	hwtw
 毫无头绪	hwtx
@@ -37124,7 +37109,6 @@ GPRS	gprs
 还治其人之身	hzqs
 恨之入骨	hzrg
 壶中日月	hzry
-火灾事故	hzsg
 贺岁	hzso
 贺岁片	hzsp
 华中师范大学	hzsx
@@ -100678,7 +100662,6 @@ GPRS	gprs
 清淡	qddd
 清道夫	qddf
 清代	qddj
-取得贷款	qddk
 强大动力	qddl
 渠道	qddm
 清单	qddm
@@ -100745,7 +100728,6 @@ GPRS	gprs
 清障	qdiv
 浅紫	qdiy
 洽	qdj
-取得进步	qdjb
 汽机	qdjc
 清洁	qdjd
 清酒	qdjd
@@ -100787,7 +100769,6 @@ GPRS	gprs
 潜力	qdln
 汽轮	qdls
 浅陋	qdlv
-取得联系	qdlx
 浅绿	qdlx
 潜力	qdlz
 清梦	qdmc
@@ -100853,7 +100834,6 @@ GPRS	gprs
 洽谈	qdtl
 浅谈	qdtl
 潜逃	qdtm
-取得突破	qdtp
 潜艇	qdtq
 洽谈室	qdts
 清甜	qdtt
@@ -100940,7 +100920,6 @@ GPRS	gprs
 茕	qebi
 蔃	qebi
 锲而不舍	qebs
-全额保险	qebx
 茕	qec
 檠	qecc
 芹菜	qece
@@ -100948,7 +100927,6 @@ GPRS	gprs
 蕲春	qecg
 弃恶从善	qecs
 蕖	qed
-全额担保	qedb
 蕖	qedc
 取而代之	qedi
 擎等着	qedi
@@ -101001,9 +100979,7 @@ GPRS	gprs
 芊	qet
 亲耳听到	qetd
 擎天	qetg
-全额退还	qeth
 擎天柱	qeti
-全额退款	qetk
 萩	qetm
 荞	qetr
 擎天柱	qetz
@@ -101028,7 +101004,6 @@ GPRS	gprs
 碁	qfai
 求爱	qfam
 乾安	qfan
-缺乏爱心	qfax
 起伏不定	qfbd
 气愤不过	qfbg
 求变	qfbh
@@ -101202,7 +101177,6 @@ GPRS	gprs
 娶亲	qfqh
 求全	qfqj
 求情	qfqn
-缺乏情趣	qfqq
 娶妻	qfqs
 恰逢其时	qfqs
 求签	qfqt
@@ -101251,15 +101225,11 @@ GPRS	gprs
 取土	qftu
 期权	qfuc
 鹊桥	qfuc
-取其	qfuf
 取巧	qfuf
-求其	qfuf
-求取	qfuf
 求求	qfuf
 娶亲	qfuh
 求全	qfuj
 求情	qfun
-缺乏情趣	qfuq
 其妻	qfus
 娶妻	qfus
 恰逢其时	qfus
@@ -101293,7 +101263,6 @@ GPRS	gprs
 求学	qfxn
 綦	qfxp
 取向	qfxr
-缺乏信任	qfxr
 娶媳	qfxs
 取笑	qfxt
 求贤	qfxu
@@ -101314,7 +101283,6 @@ GPRS	gprs
 取义	qfym
 取悦	qfyn
 巧遇	qfyo
-缺乏勇气	qfyq
 求医	qfys
 取用	qfyw
 巧用	qfyw
@@ -101485,14 +101453,10 @@ GPRS	gprs
 球门球	qgmq
 青霉素	qgms
 轻歌曼舞	qgmw
-青年报	qgnb
-青年队	qgnd
-青年宫	qgng
 青年节	qgnj
 青年人	qgnr
 清官难断家务事	qgns
 青年	qgnt
-青年团	qgnt
 青萍	qgpe
 球票	qgpf
 青苹果	qgpg
@@ -102083,7 +102047,6 @@ GPRS	gprs
 全岛	qjdw
 全等于	qjdy
 倾耳	qjef
-情节恶劣	qjel
 全额	qjen
 企鹅	qjet
 俅	qjf
@@ -102188,7 +102151,6 @@ GPRS	gprs
 倾慕	qjme
 全免费	qjmf
 全麦	qjmg
-全民族	qjmi
 全貌	qjmm
 情景模拟	qjmn
 全明	qjmr
@@ -102197,7 +102159,6 @@ GPRS	gprs
 全名	qjmw
 全马	qjmx
 强奸民意	qjmy
-全民族	qjmz
 伽	qjn
 佥	qjnd
 倾囊	qjnf
@@ -102858,7 +102819,6 @@ GPRS	gprs
 前锋	qmfy
 羌	qmg
 前滚翻	qmgf
-全民公决	qmgj
 前个	qmgj
 前谷	qmgm
 前汉	qmhd
@@ -102893,13 +102853,11 @@ GPRS	gprs
 前进	qmjg
 歉疚	qmjh
 球面几何	qmjh
-全民健康	qmjk
 前门拒狼	qmjl
 遒劲	qmjl
 燋	qmjm
 前几年	qmjn
 前景	qmjr
-全民健身	qmjs
 拳击手	qmjs
 前几天	qmjt
 拳脚	qmjv
@@ -102920,7 +102878,6 @@ GPRS	gprs
 前例	qmlj
 焌	qmlm
 前两年	qmln
-签名留念	qmln
 前轮	qmls
 前两天	qmlt
 群魔乱舞	qmlw
@@ -102936,7 +102893,6 @@ GPRS	gprs
 前年	qmnt
 前脑	qmnv
 前排	qmpk
-前怕狼	qmpl
 拳谱	qmpl
 前清	qmqd
 前期	qmqf
@@ -102958,7 +102914,6 @@ GPRS	gprs
 前世	qmsf
 前事	qmsf
 前三	qmsg
-前面说过	qmsg
 券商	qmsh
 全民所有制	qmsi
 前哨	qmsi
@@ -102973,7 +102928,6 @@ GPRS	gprs
 清明上河图	qmst
 歉收	qmsv
 前首相	qmsx
-全民所有	qmsy
 全民所有制	qmsz
 前厅	qmta
 前天	qmtg
@@ -103038,7 +102992,6 @@ GPRS	gprs
 前一天	qmyt
 前移	qmyt
 前院	qmyv
-全民义务	qmyw
 前缘	qmyx
 前一阵	qmyz
 券	qmz
@@ -103115,7 +103068,6 @@ GPRS	gprs
 寝宫	qngn
 穷国	qngo
 穷鬼	qngr
-青年工人	qngr
 情	qngv
 轻诺寡信	qngx
 寝	qnh
@@ -103149,7 +103101,6 @@ GPRS	gprs
 穷举	qnjn
 寝具	qnjo
 情景	qnjr
-青年教师	qnjs
 情境	qnju
 悄	qnjv
 情急	qnjw
@@ -103180,13 +103131,8 @@ GPRS	gprs
 情迷	qnmm
 窃密	qnmn
 穷	qnn
-去年年初	qnnc
-去年年底	qnnd
-去年年末	qnnm
 怯懦	qnnn
 穷	qnnn
-青年男女	qnnn
-去年排名	qnpm
 情牵	qnqa
 恰巧	qnqf
 窃取	qnqf
@@ -103208,13 +103154,13 @@ GPRS	gprs
 窃	qns
 穷死	qnsa
 情深	qnsd
-青年时代	qnsd
 穷酸	qnsf
 情商	qnsh
 惬	qnsh
 恰似	qnsj
 情势	qnsk
 情诗	qnsl
+情圣	qnsl
 情杀	qnsm
 寝室	qnsn
 恰似那	qnsn
@@ -103248,25 +103194,20 @@ GPRS	gprs
 情切	qnus
 悭	qnuu
 情趣	qnuu
-青年文明号	qnwh
 情味	qnwi
-青年文摘	qnwi
 千难万难	qnwn
 情网	qnwo
 千难万险	qnwx
-青年文摘	qnwz
 骞	qnx
 骞	qnxd
 情系	qnxe
 情形	qnxg
 情绪化	qnxh
-去年夏天	qnxt
 窃笑	qnxt
 窃喜	qnxu
 情系	qnxw
 情绪	qnxx
 情愿	qnya
-青年一代	qnyd
 穷于	qnyg
 情意	qnyh
 惬意	qnyh
@@ -103858,7 +103799,6 @@ QQ密码	qqmm
 雀鼠之争	qsii
 七折	qsik
 切诊	qsil
-清算账目	qsim
 翘着	qsim
 切中	qsio
 轻则	qsio
@@ -104105,7 +104045,6 @@ QQ密码	qqmm
 翘足	qszi
 七折	qszk
 切诊	qszl
-清算账目	qszm
 翘着	qszm
 切中	qszo
 轻则	qszo
@@ -104238,7 +104177,6 @@ QQ密码	qqmm
 签字	qtin
 签账	qtio
 气质	qtiq
-前天早上	qtis
 迁至	qtis
 千种	qtit
 迁走	qtiu
@@ -104272,7 +104210,6 @@ QQ密码	qqmm
 氢	qtl
 千龙	qtla
 乞灵	qtlb
-前天凌晨	qtlc
 气流	qtld
 气浪	qtld
 千两	qtlf
@@ -104453,7 +104390,6 @@ QQ密码	qqmm
 签字	qtzn
 签账	qtzo
 气质	qtzq
-前天早上	qtzs
 迁至	qtzs
 千种	qtzt
 迁走	qtzu
@@ -104642,7 +104578,6 @@ QQ密码	qqmm
 起名	qumw
 起锚	qumy
 起名字	qumz
-去年底	qund
 去拿	qunj
 却能	qunl
 墙内	quno
@@ -112416,7 +112351,6 @@ QQ密码	qqmm
 熵	smh
 受贿案	smha
 送还	smha
-送货车	smhc
 送货单	smhd
 送花	smhe
 受惠	smhf
@@ -122432,7 +122366,6 @@ QQ密码	qqmm
 清淡	uddd
 清道夫	uddf
 清代	uddj
-取得贷款	uddk
 强大动力	uddl
 渠道	uddm
 清单	uddm
@@ -122497,7 +122430,6 @@ QQ密码	qqmm
 清障	udiv
 浅紫	udiy
 洽	udj
-取得进步	udjb
 汽机	udjc
 清洁	udjd
 清酒	udjd
@@ -122538,7 +122470,6 @@ QQ密码	qqmm
 潜力	udln
 汽轮	udls
 浅陋	udlv
-取得联系	udlx
 浅绿	udlx
 潜力	udlz
 清梦	udmc
@@ -122605,7 +122536,6 @@ QQ密码	qqmm
 洽谈	udtl
 浅谈	udtl
 潜逃	udtm
-取得突破	udtp
 潜艇	udtq
 洽谈室	udts
 清甜	udtt
@@ -122689,7 +122619,6 @@ QQ密码	qqmm
 茕	uebi
 蔃	uebi
 锲而不舍	uebs
-全额保险	uebx
 茕	uec
 檠	uecc
 芹菜	uece
@@ -122697,7 +122626,6 @@ QQ密码	qqmm
 蕲春	uecg
 弃恶从善	uecs
 蕖	ued
-全额担保	uedb
 蕖	uedc
 取而代之	uedi
 擎等着	uedi
@@ -122750,9 +122678,7 @@ QQ密码	qqmm
 芊	uet
 亲耳听到	uetd
 擎天	uetg
-全额退还	ueth
 擎天柱	ueti
-全额退款	uetk
 萩	uetm
 荞	uetr
 萋萋	ueue
@@ -122776,7 +122702,6 @@ QQ密码	qqmm
 碁	ufai
 求爱	ufam
 乾安	ufan
-缺乏爱心	ufax
 起伏不定	ufbd
 气愤不过	ufbg
 求变	ufbh
@@ -122944,15 +122869,11 @@ QQ密码	qqmm
 裘皮	ufpz
 期权	ufqc
 鹊桥	ufqc
-取其	ufqf
 取巧	ufqf
-求其	ufqf
-求取	ufqf
 求求	ufqf
 娶亲	ufqh
 求全	ufqj
 求情	ufqn
-缺乏情趣	ufqq
 其妻	ufqs
 娶妻	ufqs
 恰逢其时	ufqs
@@ -123010,7 +122931,6 @@ QQ密码	qqmm
 娶妻	ufus
 恰逢其时	ufus
 求签	ufut
-缺乏情趣	ufuu
 鹊起	ufuu
 取钱	ufuy
 期	ufv
@@ -123039,7 +122959,6 @@ QQ密码	qqmm
 求学	ufxn
 綦	ufxp
 取向	ufxr
-缺乏信任	ufxr
 娶媳	ufxs
 取笑	ufxt
 求贤	ufxu
@@ -123061,7 +122980,6 @@ QQ密码	qqmm
 取悦	ufyn
 巧遇	ufyo
 求医	ufys
-缺乏勇气	ufyu
 取用	ufyw
 巧用	ufyw
 期约	ufyx
@@ -123228,14 +123146,10 @@ QQ密码	qqmm
 青霉素	ugms
 球门球	ugmu
 轻歌曼舞	ugmw
-青年报	ugnb
-青年队	ugnd
-青年宫	ugng
 青年节	ugnj
 青年人	ugnr
 清官难断家务事	ugns
 青年	ugnt
-青年团	ugnt
 青萍	ugpe
 球票	ugpf
 青苹果	ugpg
@@ -123817,7 +123731,6 @@ QQ密码	qqmm
 全岛	ujdw
 全等于	ujdy
 倾耳	ujef
-情节恶劣	ujel
 全额	ujen
 企鹅	ujet
 俅	ujf
@@ -123922,7 +123835,6 @@ QQ密码	qqmm
 倾慕	ujme
 全免费	ujmf
 全麦	ujmg
-全民族	ujmi
 全貌	ujmm
 情景模拟	ujmn
 全明	ujmr
@@ -124578,7 +124490,6 @@ QQ密码	qqmm
 前锋	umfy
 羌	umg
 前滚翻	umgf
-全民公决	umgj
 前个	umgj
 前谷	umgm
 前汉	umhd
@@ -124613,13 +124524,11 @@ QQ密码	qqmm
 前进	umjg
 歉疚	umjh
 球面几何	umjh
-全民健康	umjk
 前门拒狼	umjl
 遒劲	umjl
 燋	umjm
 前几年	umjn
 前景	umjr
-全民健身	umjs
 拳击手	umjs
 前几天	umjt
 拳脚	umjv
@@ -124639,7 +124548,6 @@ QQ密码	qqmm
 前路	umli
 前例	umlj
 焌	umlm
-签名留念	umln
 前轮	umls
 前两天	umlt
 群魔乱舞	umlw
@@ -124655,7 +124563,6 @@ QQ密码	qqmm
 前年	umnt
 前脑	umnv
 前排	umpk
-前怕狼	umpl
 拳谱	umpl
 前清	umqd
 前期	umqf
@@ -124677,7 +124584,6 @@ QQ密码	qqmm
 前世	umsf
 前事	umsf
 前三	umsg
-前面说过	umsg
 券商	umsh
 全民所有制	umsi
 前哨	umsi
@@ -124692,7 +124598,6 @@ QQ密码	qqmm
 清明上河图	umst
 歉收	umsv
 前首相	umsx
-全民所有	umsy
 全民所有制	umsz
 前厅	umta
 前天	umtg
@@ -124755,7 +124660,6 @@ QQ密码	qqmm
 前牙	umys
 前一天	umyt
 前院	umyv
-全民义务	umyw
 前缘	umyx
 券	umz
 前者	umzf
@@ -124825,7 +124729,6 @@ QQ密码	qqmm
 寝宫	ungn
 穷国	ungo
 穷鬼	ungr
-青年工人	ungr
 情	ungv
 轻诺寡信	ungx
 寝	unh
@@ -124859,7 +124762,6 @@ QQ密码	qqmm
 穷举	unjn
 寝具	unjo
 情景	unjr
-青年教师	unjs
 情境	unju
 悄	unjv
 情急	unjw
@@ -124891,8 +124793,6 @@ QQ密码	qqmm
 穷	unn
 怯懦	unnn
 穷	unnn
-青年男女	unnn
-去年排名	unpm
 情牵	unqa
 恰巧	unqf
 穷其	unqf
@@ -124915,13 +124815,13 @@ QQ密码	qqmm
 窃	uns
 穷死	unsa
 情深	unsd
-青年时代	unsd
 穷酸	unsf
 情商	unsh
 惬	unsh
 恰似	unsj
 情势	unsk
 情诗	unsl
+情圣	unsl
 情杀	unsm
 寝室	unsn
 恰似那	unsn
@@ -124932,7 +124832,6 @@ QQ密码	qqmm
 怯生生	unss
 悄声	unsu
 穷酸气	unsu
-青年时期	unsu
 情色	unsw
 情书	unsx
 窃	unsz
@@ -124955,25 +124854,20 @@ QQ密码	qqmm
 恰恰是	unus
 悭	unuu
 情趣	unuu
-青年文明号	unwh
 情味	unwi
-青年文摘	unwi
 千难万难	unwn
 情网	unwo
 千难万险	unwx
-青年文摘	unwz
 骞	unx
 骞	unxd
 情系	unxe
 情形	unxg
 情绪化	unxh
-去年夏天	unxt
 窃笑	unxt
 窃喜	unxu
 情系	unxw
 情绪	unxx
 情愿	unya
-青年一代	unyd
 穷于	unyg
 情意	unyh
 惬意	unyh
@@ -125485,7 +125379,6 @@ QQ密码	qqmm
 雀鼠之争	usii
 七折	usik
 切诊	usil
-清算账目	usim
 翘着	usim
 切中	usio
 轻则	usio
@@ -125728,7 +125621,6 @@ QQ密码	qqmm
 翘足	uszi
 七折	uszk
 切诊	uszl
-清算账目	uszm
 翘着	uszm
 切中	uszo
 轻则	uszo
@@ -125861,7 +125753,6 @@ QQ密码	qqmm
 签字	utin
 签账	utio
 气质	utiq
-前天早上	utis
 迁至	utis
 千种	utit
 迁走	utiu
@@ -125895,7 +125786,6 @@ QQ密码	qqmm
 氢	utl
 千龙	utla
 乞灵	utlb
-前天凌晨	utlc
 气流	utld
 气浪	utld
 千两	utlf
@@ -126072,7 +125962,6 @@ QQ密码	qqmm
 签字	utzn
 签账	utzo
 气质	utzq
-前天早上	utzs
 迁至	utzs
 千种	utzt
 迁走	utzu
@@ -126264,7 +126153,6 @@ QQ密码	uumm
 起毛	uumt
 起名	uumw
 起锚	uumy
-去年底	uund
 去拿	uunj
 却能	uunl
 墙内	uuno
@@ -136875,7 +136763,6 @@ Z	vyz
 学生高考	xsgk
 嫌贵	xsgo
 学生公寓	xsgy
-厢式货车	xshc
 心神恍惚	xshh
 消食和中	xshi
 小事化了	xshl
