--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,7 +1,7 @@
 var:
-  last_build_time: 1719593794
-  previously_selected_schema: zzdyx_mop
+  last_build_time: 1719598146
+  previously_selected_schema: zzdyx_mod
   schema_access_time:
-    xhup: 1719469943
-    zzdyx_mod: 1719593804
-    zzdyx_mop: 1719594830
+    xhup: 1719596156
+    zzdyx_mod: 1719598134
+    zzdyx_mop: 1719597912
