--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -12640,7 +12640,6 @@ bilibili	blbl
 超神	cusl
 场数	cusm
 城守	cusn
-超水平	cusp
 场所	cusq
 超时	cusr
 超生	cust
@@ -22261,7 +22260,6 @@ bilibili	blbl
 放送	fhsm
 非婚生子女	fhsn
 方山	fhso
-发挥水平	fhsp
 放射	fhsr
 方式	fhss
 放生	fhst
@@ -22269,7 +22267,6 @@ bilibili	blbl
 腐蚀	fhsw
 放射性	fhsx
 放射线	fhsx
-腐蚀性	fhsx
 放上	fhsy
 放射源	fhsy
 方世玉	fhsy
@@ -22310,8 +22307,8 @@ bilibili	blbl
 烽火戏诸侯	fhxh
 放线菌	fhxj
 放行	fhxk
-伏虎降龙	fhxl
 放心	fhxl
+伏虎降龙	fhxl
 放学	fhxn
 方向盘	fhxp
 方向	fhxr
@@ -27601,7 +27598,6 @@ bilibili	blbl
 高山	ghso
 勾魂摄魄	ghsp
 高射炮	ghsp
-高水平	ghsp
 高收入	ghsr
 高升	ghst
 高声	ghsu
@@ -31117,7 +31113,6 @@ GPRS	gprs
 故作深沉	gzsc
 戤	gzsk
 个中三昧	gzsm
-工资水平	gzsp
 骨质疏松	gzss
 公众投票	gztp
 狗嘴吐不出象牙	gzty
@@ -38921,7 +38916,6 @@ GPRS	gprs
 珍视	igsl
 专杀	igsm
 专署	igso
-最高水平	igsp
 转过身去	igsq
 珠算	igst
 转过身去	igsu
@@ -43703,7 +43697,6 @@ GPRS	gprs
 獐头鼠目	itsm
 知识面	itsm
 赞颂	itsm
-总体水平	itsp
 指天誓日	itsr
 簪	itsr
 制式	itss
@@ -57846,7 +57839,6 @@ GPRS	gprs
 涟	ldsn
 梁山	ldso
 梁山泊	ldsp
-领导水平	ldsp
 零打碎敲	ldsq
 流式	ldss
 流失	ldst
@@ -62371,7 +62363,6 @@ GPRS	gprs
 缆索	lxsf
 练手	lxsk
 绿山	lxso
-领先水平	lxsp
 利息收入	lxsr
 绿松石	lxss
 络腮	lxsv
@@ -105948,7 +105939,6 @@ QQ密码	qqmm
 人设	rjsl
 人均寿命	rjsm
 人数	rjsm
-人均水平	rjsp
 人所	rjsq
 人身权	rjsq
 如胶似漆	rjsq
@@ -108680,7 +108670,6 @@ QQ密码	qqmm
 深壑	sdhy
 水浒传	sdhz
 渑	sdi
-受到阻碍	sdia
 洒在	sdia
 所到之处	sdic
 水柱	sdic
@@ -108712,11 +108701,11 @@ QQ密码	qqmm
 深重	sdit
 深圳	sdiu
 水蒸汽	sdiu
-水肿	sdiv
 沙子	sdiv
-师道尊严	sdiy
+水肿	sdiv
 水煮鱼	sdiy
 水钻	sdiy
+师道尊严	sdiy
 沙家浜	sdjb
 深居	sdjb
 首都机场	sdjc
@@ -108789,7 +108778,6 @@ QQ密码	qqmm
 水里	sdlo
 溞	sdlo
 潏	sdlo
-圣诞礼品	sdlp
 圣诞老人	sdlr
 水量	sdlr
 水轮	sdls
@@ -108799,6 +108787,7 @@ QQ密码	qqmm
 死到临头	sdlt
 水陆	sdlv
 涉猎	sdlw
+圣诞礼物	sdlw
 深绿	sdlx
 水龙吟	sdly
 水力	sdlz
@@ -108865,7 +108854,6 @@ QQ密码	qqmm
 水平面	sdpm
 水盆	sdpm
 深怕	sdpn
-受到批评	sdpp
 沙盘	sdpq
 水平上	sdps
 沙坡头	sdpt
@@ -108880,7 +108868,6 @@ QQ密码	qqmm
 深浅	sdqd
 适得其反	sdqf
 水球	sdqg
-受到侵害	sdqh
 手到擒来	sdql
 沙琪玛	sdqm
 深情	sdqn
@@ -108970,7 +108957,6 @@ QQ密码	qqmm
 深浅	sdud
 适得其反	sduf
 水球	sdug
-受到侵害	sduh
 手到擒来	sdul
 沙琪玛	sdum
 深情	sdun
@@ -109000,7 +108986,6 @@ QQ密码	qqmm
 水务	sdww
 水汪汪	sdww
 涉外	sdww
-受到威胁	sdwx
 水纹	sdwx
 数典忘祖	sdwz
 水文站	sdwz
@@ -109010,7 +108995,6 @@ QQ密码	qqmm
 水系	sdxe
 水仙花	sdxh
 水循环	sdxh
-受到限制	sdxi
 深吸	sdxi
 深信	sdxj
 水袖	sdxl
@@ -109024,7 +109008,6 @@ QQ密码	qqmm
 深陷	sdxv
 水系	sdxw
 水乡	sdxx
-受到限制	sdxz
 涉	sdy
 深有	sdya
 水样	sdyc
@@ -109058,7 +109041,6 @@ QQ密码	qqmm
 水银	sdyy
 射雕英雄传	sdyz
 涩	sdz
-受到阻碍	sdza
 洒在	sdza
 所到之处	sdzc
 水柱	sdzc
@@ -109089,11 +109071,11 @@ QQ密码	qqmm
 深重	sdzt
 水蒸汽	sdzu
 深圳	sdzu
-水肿	sdzv
 沙子	sdzv
-师道尊严	sdzy
+水肿	sdzv
 水煮鱼	sdzy
 水钻	sdzy
+师道尊严	sdzy
 涩	sdzy
 苏	se
 蔬	se
@@ -112269,10 +112251,9 @@ QQ密码	qqmm
 煽动	smdg
 首度	smdh
 兽	smdi
+杀跌	smdi
 声名大噪	smdi
 声名大振	smdi
-数得着	smdi
-杀跌	smdi
 善待	smdk
 受得了	smdl
 苏门答腊	smdl
@@ -114174,7 +114155,6 @@ QQ密码	qqmm
 市容市貌	srsm
 身受	srsm
 顺遂	srsm
-收入水平	srsp
 时时	srsr
 顺式	srss
 曙色	srsw
@@ -131903,7 +131883,6 @@ Z	vyz
 小班授课	xbsk
 弦数	xbsm
 寻思	xbso
-细胞水平	xbsp
 细胞生物学	xbsx
 小本生意	xbsy
 犀	xbt
@@ -134662,7 +134641,6 @@ Z	vyz
 携手	xksk
 行善	xksm
 行署	xkso
-小康水平	xksp
 行省	xksp
 徇私	xkst
 循声	xksu
@@ -149265,7 +149243,6 @@ Z	vyz
 转过身来	zgsl
 专杀	zgsm
 专署	zgso
-最高水平	zgsp
 转过身去	zgsq
 珠算	zgst
 转过身去	zgsu
@@ -153927,7 +153904,6 @@ Z	vyz
 獐头鼠目	ztsm
 知识面	ztsm
 赞颂	ztsm
-总体水平	ztsp
 指天誓日	ztsr
 簪	ztsr
 制式	ztss
