--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,7 +1,8 @@
 var:
-  last_build_time: 1719599338
+  last_build_time: 1719602566
   previously_selected_schema: zzdyx_mod
   schema_access_time:
     xhup: 1719596156
-    zzdyx_mod: 1719599386
-    zzdyx_mop: 1719597912
+    zzdyx_mod: 1719602506
+    zzdyx_mop: 1719602397
+    zzdyx_single: 1719602472
