--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -3002,6 +3002,7 @@ CPU	cpu
 冰雪	bhxh
 变心	bhxl
 禀性	bhxn
+变性	bhxn
 变小	bhxp
 变向	bhxr
 病邪	bhxs
@@ -29327,8 +29328,8 @@ bilibili	blbl
 国民党	gomd
 国骂	gomi
 购买者	gomi
-国民军	gomj
 国门	gomj
+国民军	gomj
 蚣	goml
 购买力	goml
 国美	gomm
@@ -106159,7 +106160,6 @@ QQ密码	qqmm
 热卖	rkmf
 热门股	rkmg
 热门货	rkmh
-人口密集	rkmj
 热门	rkmj
 热	rkmm
 热敏	rkmt
