--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -36458,8 +36458,8 @@ GPRS	gprs
 忽	hwlk
 忽略	hwlo
 宏伟蓝图	hwlt
-毫无例外	hwlw
 狐狸	hwlw
+毫无例外	hwlw
 后无来者	hwlz
 狠命	hwmj
 昏迷	hwmm
@@ -55888,7 +55888,6 @@ GPRS	gprs
 空幻	knhx
 客栈	knic
 快哉	knif
-客座	knih
 客站	knih
 寇仲	knij
 空置率	knil
@@ -55921,7 +55920,6 @@ GPRS	gprs
 空姐	knjs
 空间商	knjs
 快镜头	knjt
-空际	knjv
 空降	knjv
 宽解	knjw
 空间站	knjz
@@ -55995,11 +55993,10 @@ GPRS	gprs
 客商	knsh
 苦难深重	knsi
 窥伺	knsj
-恺撒	knsk
 空手	knsk
-快说	knsl
-快速路	knsl
+恺撒	knsk
 窥视	knsl
+快速路	knsl
 恪守	knsn
 空山	knso
 咳逆上气	knsq
@@ -56967,8 +56964,8 @@ GPRS	gprs
 龙虎斗	lahd
 硫黄	lahf
 裂痕	lahh
-硫化	lahj
 龙华	lahj
+硫化	lahj
 裂	lahk
 柳暗花明	lahm
 烈火	lahm
@@ -57060,7 +57057,6 @@ GPRS	gprs
 硫酸钡	lasb
 两岸三地	lasd
 厉	lase
-历世	lasf
 硫酸	lasf
 磷酸	lasf
 历史观	lasg
@@ -57122,10 +57118,9 @@ GPRS	gprs
 龙颜	layh
 聋哑	layi
 烈焰	laym
-砾岩	layo
 龙眼	layo
+砾岩	layo
 聋哑人	layr
-龙应台	layt
 龙阳	layv
 列印	layw
 历	laz
@@ -57138,9 +57133,8 @@ GPRS	gprs
 龙种	lazt
 励志	lazu
 列阵	lazv
-磷脂	lazv
 聋子	lazv
-龙钟	lazy
+磷脂	lazv
 励	lazz
 录	lb
 屡	lb
@@ -57588,7 +57582,6 @@ GPRS	gprs
 沥	ldaz
 漏	ldb
 泪奔	ldba
-流布	ldba
 淋巴癌	ldba
 溜冰场	ldbc
 漏洞百出	ldbc
@@ -57599,8 +57592,8 @@ GPRS	gprs
 雷打不动	ldbd
 漏	ldbf
 淋巴管	ldbg
-流变	ldbh
 溜冰	ldbh
+流变	ldbh
 领导班子	ldbi
 淋巴结	ldbj
 滥捕	ldbk
@@ -57676,8 +57669,8 @@ GPRS	gprs
 流干	ldgg
 浪高	ldgh
 泪光	ldgj
-流光	ldgj
 漏光	ldgj
+流光	ldgj
 伶仃孤苦	ldgk
 瑬	ldgk
 漏谷	ldgm
@@ -57728,10 +57721,8 @@ GPRS	gprs
 澜	ldjf
 流进	ldjg
 溜进	ldjg
-领导机关	ldjg
-浪迹	ldjh
 滥交	ldjh
-流动基金	ldjj
+浪迹	ldjh
 雷电交加	ldjj
 漏接	ldjk
 泠	ldjl
@@ -57822,11 +57813,9 @@ GPRS	gprs
 涟	lds
 梁山伯	ldsb
 梁思成	ldsc
-落到实处	ldsc
-泪水	ldsd
-淋湿	ldsd
-流水	ldsd
 漏水	ldsd
+流水	ldsd
+泪水	ldsd
 流沙	ldsd
 流苏	ldse
 流速	ldsf
@@ -57890,25 +57879,21 @@ GPRS	gprs
 鹂	ldwd
 溜弯儿	ldwe
 立党为公	ldwg
-沦亡	ldwh
 流亡	ldwh
-浪纹号	ldwh
 洛	ldwi
 泺	ldwk
 沦为	ldwm
-滤网	ldwo
 漏网	ldwo
+滤网	ldwo
 力大无穷	ldwq
 澛	ldwr
 力大无穷	ldwu
 泪汪汪	ldww
 路德维希	ldwx
-流纹岩	ldwy
 流行病	ldxb
 流泻	ldxd
 滤芯	ldxe
 流形	ldxg
-领导小组	ldxi
 流像	ldxj
 流行	ldxk
 流下来	ldxl
@@ -58024,8 +58009,8 @@ GPRS	gprs
 落果	lego
 蕾	leh
 蓝海	lehd
-芦荟	lehe
 莲花	lehe
+芦荟	lehe
 落花	lehe
 莱	lehk
 落户	lehl
@@ -58037,10 +58022,9 @@ GPRS	gprs
 荔枝	leic
 蓝藻	leie
 甪直	leif
-劳资	leih
-荔枝核	leih
-莲座	leih
 落座	leih
+劳资	leih
+莲座	leih
 劳作	leij
 莱州	leim
 落照	leir
@@ -58054,8 +58038,8 @@ GPRS	gprs
 落进	lejg
 莅	lejh
 蔺	lejj
-苓	lejl
 蓝军	lejl
+苓	lejl
 蓝精灵	lejl
 劳驾	lejn
 劳教所	lejs
@@ -58088,8 +58072,8 @@ GPRS	gprs
 劳民	lemb
 劳模	lemc
 落满	lemd
-落幕	leme
 蓝莓	leme
+落幕	leme
 老而弥坚	lemj
 菱镁矿	lemk
 落寞	lemn
@@ -58162,7 +58146,6 @@ GPRS	gprs
 铃儿响叮当	lexd
 落下	lexf
 菱形	lexg
-莱辛	lexh
 落霞	lexh
 劳心	lexl
 落选	lext
@@ -58182,10 +58165,9 @@ GPRS	gprs
 荔枝	lezc
 蓝藻	leze
 甪直	lezf
-劳资	lezh
-荔枝核	lezh
-莲座	lezh
 落座	lezh
+劳资	lezh
+莲座	lezh
 劳作	lezj
 莱州	lezm
 落照	lezr
@@ -58209,7 +58191,6 @@ GPRS	gprs
 老本行	lfbh
 老伯	lfbj
 老伴	lfbj
-联保	lfbj
 联播	lfbk
 两遍	lfbl
 老八路	lfbl
@@ -58375,9 +58356,9 @@ GPRS	gprs
 老茧	lfje
 两截	lfjf
 立法机关	lfjg
-两颊	lfjh
-老将	lfjh
 老江湖	lfjh
+老将	lfjh
+两颊	lfjh
 老旧	lfji
 两间	lfjj
 联接	lfjk
@@ -58442,9 +58423,9 @@ GPRS	gprs
 两面派	lfmp
 两毛钱	lfmq
 联盟	lfmr
-两码事	lfms
 老妈	lfms
 老妹	lfms
+两码事	lfms
 老迈	lfms
 两毛钱	lfmu
 联名	lfmw
@@ -58568,19 +58549,17 @@ GPRS	gprs
 两栖	lfuc
 两清	lfud
 联勤	lfuf
-两球	lfug
 流芳千古	lfug
 两全	lfuj
 两抢	lfuk
 两讫	lful
-立法权力	lful
 老拳	lfum
 两情	lfun
 两圈	lfuo
 老区	lfus
-两千	lfut
-老千	lfut
 老气	lfut
+老千	lfut
+两千	lfut
 聊起	lfuu
 老	lfw
 聊	lfw
@@ -58636,9 +58615,8 @@ GPRS	gprs
 老样子	lfyi
 老爷子	lfyi
 两亿	lfyj
-两翼	lfyl
-聊以	lfyl
 赖以	lfyl
+两翼	lfyl
 老爷	lfym
 老爷们	lfym
 两眼	lfyo
@@ -58854,8 +58832,8 @@ GPRS	gprs
 冷傲	lhaj
 离岸价	lhaj
 恋爱	lham
-疬	lhan
 立案	lhan
+疬	lhan
 离岸	lhao
 亮氨酸	lhas
 冽	lhau
@@ -58873,8 +58851,8 @@ GPRS	gprs
 刘邦	lhbg
 冷冰	lhbh
 离合悲欢	lhbh
-来吧	lhbi
 离别	lhbi
+来吧	lhbi
 旅伴	lhbj
 来不及	lhbj
 零部件	lhbj
@@ -58884,8 +58862,8 @@ GPRS	gprs
 雷暴	lhbr
 露白	lhbr
 来比	lhbs
-刘伯温	lhbw
 刘备	lhbw
+刘伯温	lhbw
 六边形	lhbx
 露背	lhby
 栾	lhc
@@ -58894,21 +58872,19 @@ GPRS	gprs
 冷藏车	lhcc
 霖	lhcc
 来潮	lhcd
+凉菜	lhce
 冷藏	lhce
 凉茶	lhce
-凉菜	lhce
-六朝	lhcf
 廉耻	lhcf
-旅差费	lhcf
-冷藏柜	lhcg
+六朝	lhcf
 立春	lhcg
+冷藏柜	lhcg
 六次	lhch
 冷嘲	lhci
 刘彻	lhck
 冷处理	lhcl
-老好吃了	lhcl
-灵魂出窍	lhcq
 炉火纯青	lhcq
+灵魂出窍	lhcq
 凌晨	lhcr
 冷藏室	lhcs
 旅程	lhct
@@ -58983,9 +58959,9 @@ GPRS	gprs
 立法权	lhfu
 六腑	lhfv
 癞	lhfw
+雷锋	lhfy
 冷锋	lhfy
 立法院	lhfy
-雷锋	lhfy
 来访者	lhfz
 联合公报	lhgb
 辣根	lhgc
@@ -59000,8 +58976,8 @@ GPRS	gprs
 来搞	lhgk
 雷公	lhgm
 冷宫	lhgn
-离岗	lhgo
 露骨	lhgo
+离岗	lhgo
 来归	lhgp
 来稿	lhgt
 雷管	lhgt
@@ -59013,17 +58989,17 @@ GPRS	gprs
 凉	lhh
 来还	lhha
 六合彩	lhhc
-亮红灯	lhhd
 冷汗	lhhd
 刘海	lhhd
 零活	lhhd
+亮红灯	lhhd
 零花	lhhe
 凛	lhhg
 廪	lhhg
 冷哼	lhhi
 离婚证	lhhi
-来华	lhhj
 离合	lhhj
+来华	lhhj
 离婚率	lhhl
 冷焊	lhhm
 癞蛤蟆	lhhm
@@ -59069,8 +59045,7 @@ GPRS	gprs
 蠃	lhiv
 辣子	lhiv
 六周	lhiw
-来自于	lhiy
-立足于	lhiy
+冷战	lhiy
 雷阵雨	lhiy
 冷	lhj
 零	lhj
@@ -59084,13 +59059,13 @@ GPRS	gprs
 斓	lhjf
 冷静	lhjg
 雷击	lhjg
-痢疾	lhjh
 辣酱	lhjh
+痢疾	lhjh
 恋旧	lhji
-亮晶晶	lhjj
-廉价	lhjj
-辣椒酱	lhjj
 零件	lhjj
+廉价	lhjj
+亮晶晶	lhjj
+辣椒酱	lhjj
 来接	lhjk
 零	lhjl
 零距离	lhjl
@@ -59116,8 +59091,8 @@ GPRS	gprs
 陆海空三军	lhkj
 挛	lhkk
 凉快	lhkn
-凌空	lhkn
 旅客	lhkn
+凌空	lhkn
 冷空气	lhkq
 凉开水	lhks
 冷空气	lhku
@@ -59142,10 +59117,10 @@ GPRS	gprs
 两河流域	lhly
 冷链	lhly
 六	lhm
-冷面	lhma
 凉面	lhma
-立面	lhma
 露面	lhma
+冷面	lhma
+立面	lhma
 雷鸣般	lhmb
 冷梅	lhmc
 冷漠	lhmd
@@ -59249,9 +59224,9 @@ GPRS	gprs
 露水	lhsd
 疠	lhse
 吝啬	lhsf
+零散	lhsf
 来世	lhsf
 离散	lhsf
-零散	lhsf
 冷霜	lhsh
 孪生子	lhsi
 零售	lhsj
@@ -59309,15 +59284,17 @@ GPRS	gprs
 离弃	lhuh
 凌	lhum
 恋情	lhun
+露怯	lhun
 恋曲	lhuo
 冷泉	lhur
 雷区	lhus
 冷却水	lhus
 冷气	lhut
-冷却	lhuu
+立秋	lhut
 离去	lhuu
-冷却器	lhuu
+冷却	lhuu
 刘	lhuu
+冷却器	lhuu
 露脐	lhuv
 凌	lhuw
 零钱	lhuy
@@ -59447,8 +59424,6 @@ GPRS	gprs
 辣子	lhzv
 六周	lhzw
 冷战	lhzy
-来自于	lhzy
-立足于	lhzy
 雷阵雨	lhzy
 亮铮铮	lhzz
 路	li
@@ -59484,9 +59459,9 @@ GPRS	gprs
 路程	lict
 另存为	licw
 列支敦士登	lidd
-六字大明咒	lidi
 唠叨	lidi
 蹓跶	lidi
+六字大明咒	lidi
 溜之大吉	lidj
 路德	lidk
 路灯	lidm
@@ -59632,16 +59607,14 @@ GPRS	gprs
 另行	lixk
 另悉	lixm
 躐	lixo
-另选	lixt
 路线图	lixt
+另选	lixt
 路线	lixx
 另有	liya
 另一半	liyb
-另一	liyd
 路演	liyd
 略知一二	liye
 另眼	liyo
-路遇	liyo
 路由器	liyq
 路易	liyr
 路易斯	liys
@@ -59755,8 +59728,8 @@ GPRS	gprs
 两军交战	ljji
 例假	ljjj
 邻接	ljjk
-伶	ljjl
 领军	ljjl
+伶	ljjl
 领进来	ljjl
 邻家	ljjn
 领巾	ljjo
@@ -59949,7 +59922,6 @@ GPRS	gprs
 拉钩	lkgy
 掠	lkh
 拦河坝	lkhb
-拦河	lkhd
 揽活	lkhd
 撂荒	lkhe
 拉环	lkhg
@@ -60149,10 +60121,10 @@ GPRS	gprs
 礼包	llbw
 礼	llc
 良辰	llca
-㮾	llcc
-冧	llcc
 拉拉扯扯	llcc
 良材	llcc
+冧	llcc
+㮾	llcc
 两肋插刀	llcd
 绫罗绸缎	llcd
 良臣	llcf
@@ -60164,8 +60136,8 @@ GPRS	gprs
 溜溜达达	lldd
 落落大方	lldf
 朗读	lldl
-礼单	lldm
 论断	lldm
+礼单	lldm
 流离颠沛	lldp
 论敌	lldt
 良多	lldw
@@ -60206,9 +60178,9 @@ GPRS	gprs
 历历在目	llim
 郎中	llio
 裸照	llir
-礼赞	llit
 良知	llit
 良种	llit
+礼赞	llit
 裸子	lliv
 论争	lliw
 论战	lliy
@@ -60231,9 +60203,9 @@ GPRS	gprs
 论斤	lljq
 郎舅	lljr
 流落街头	lljt
+谅解	lljw
 良久	lljw
 论及	lljw
-谅解	lljw
 礼节性	lljx
 礼金	lljy
 淋漓尽致	lljz
@@ -60259,8 +60231,8 @@ GPRS	gprs
 礼貌	llmm
 礼帽	llmo
 褛	llms
-良母	llmx
 良马	llmx
+良母	llmx
 论难	llnl
 勠	llnn
 裸女	llns
@@ -60405,7 +60377,6 @@ GPRS	gprs
 粮仓	lmcj
 兰大	lmda
 罗马帝国	lmdg
-粒度	lmdh
 粮店	lmdh
 粮袋	lmdj
 罗曼蒂克	lmdk
@@ -60428,7 +60399,6 @@ GPRS	gprs
 兰花草	lmhc
 粒	lmhd
 兰花	lmhe
-烙花	lmhe
 烂货	lmhj
 炉火	lmhm
 炉渣	lmid
@@ -60526,7 +60496,6 @@ GPRS	gprs
 兰特	lmtt
 炉膛	lmtv
 兰亭序	lmtx
-炼铁	lmty
 烙铁	lmty
 炉筒子	lmtz
 烂摊子	lmtz
@@ -60582,14 +60551,13 @@ GPRS	gprs
 力避	lnbb
 力比多	lnbd
 力保	lnbj
-老年保健	lnbj
 流年不利	lnbl
 老牛吃嫩草	lncc
 老年痴呆	lncd
 老年痴呆症	lnci
 力促	lncj
-力持	lnck
 力撑	lnck
+力持	lnck
 懒虫	lnco
 力场	lncu
 老年痴呆症	lncz
@@ -60647,8 +60615,8 @@ GPRS	gprs
 寥落	lnle
 寥	lnlj
 悢	lnlk
-愣愣	lnln
 牢牢	lnln
+愣愣	lnln
 牢里	lnlo
 力量	lnlr
 牢笼	lnlt
@@ -60704,8 +60672,8 @@ GPRS	gprs
 牢稳	lnwt
 鲁难未已	lnwy
 力行	lnxk
-力学	lnxn
 怜惜	lnxn
+力学	lnxn
 怜香	lnxt
 力压	lnya
 懒于	lnyg
@@ -60823,12 +60791,12 @@ GPRS	gprs
 螺距	loji
 里间	lojj
 罗技	lojk
-囹	lojl
 累计	lojl
 蛉	lojl
+囹	lojl
 蜡炬	lojm
-略加	lojn
 累加	lojn
+略加	lojn
 略具	lojo
 逻辑	lojs
 累积	lojt
@@ -60900,12 +60868,12 @@ GPRS	gprs
 罗嗦	losi
 里手	losk
 略说	losl
-罗生门	losm
 螺丝帽	losm
+罗生门	losm
 里士满	losm
 里实	losn
-崂山	loso
 螺蛳	loso
+崂山	loso
 略少	losp
 里氏	losw
 螺丝	losx
@@ -61209,48 +61177,43 @@ GPRS	gprs
 连横	lshc
 轮滑	lshd
 连环	lshg
-梁山好汉	lshh
 连环画	lshh
-络腮胡子	lshi
-辌	lshi
+梁山好汉	lshh
 连号	lshi
+辌	lshi
 轮换	lshk
 轮回	lsho
 辌	lshp
 乐善好施	lshs
-连好	lshs
 辘	lshv
-络腮胡子	lshz
 连在	lsia
 连载	lsif
-律师资格	lsig
+连遭	lsif
 连字号	lsih
 连轴转	lsii
-轮作	lsij
 连坐	lsij
+轮作	lsij
 连招	lsik
 嫘祖	lsil
-庐山真面	lsim
 庐山真面目	lsim
 连着	lsim
 连珠炮	lsip
-轮转	lsis
 轮轴	lsis
+轮转	lsis
 连轴	lsis
 连长	lsit
 轮子	lsiv
 连缀	lsix
 连战	lsiy
+连轴转	lsii
 轮	lsj
 轮机	lsjc
 轮机长	lsjc
-连接到	lsjd
 连江	lsjd
 连击	lsjg
-连接号	lsjh
+轮距	lsji
 梁上君子	lsji
 轮机长	lsji
-轮距	lsji
 连接	lsjk
 姈	lsjl
 孪生姐妹	lsjm
@@ -61318,8 +61281,6 @@ GPRS	gprs
 连说	lssl
 连署	lsso
 连射	lssr
-利水渗湿	lsss
-律师事务所	lsss
 轮式	lsss
 鹿死谁手	lsss
 连生	lsst
@@ -61329,7 +61290,6 @@ GPRS	gprs
 绿色通道	lstd
 连天	lstg
 连体	lstj
-连台	lstl
 连通	lstl
 连同	lsto
 连通器	lstq
@@ -61337,8 +61297,8 @@ GPRS	gprs
 轮胎	lstv
 连体衣	lsty
 轮圈	lsuo
-绿水青山	lsus
 连翘	lsus
+绿水青山	lsus
 连起	lsuu
 辂	lsw
 滥杀无辜	lswg
@@ -61352,20 +61312,17 @@ GPRS	gprs
 六神无主	lswz
 孪生兄弟	lsxd
 利水消肿	lsxi
-铃声下载	lsxi
-轮休	lsxj
 连续剧	lsxj
+轮休	lsxj
 连心	lsxl
 来势凶猛	lsxm
 路上行人	lsxr
 连选	lsxt
-来势汹汹	lsxx
-连线	lsxx
 连续	lsxx
-连续性	lsxx
+连线	lsxx
+来势汹汹	lsxx
 老少咸宜	lsxy
 利水消肿	lsxz
-铃声下载	lsxz
 轳	lsy
 略胜一筹	lsyc
 轮椅	lsyc
@@ -61390,18 +61347,16 @@ GPRS	gprs
 连在	lsza
 连载	lszf
 连遭	lszf
-律师资格	lszg
 连珠	lszg
 连字号	lszh
 轮作	lszj
 连招	lszk
 嫘祖	lszl
-庐山真面	lszm
 庐山真面目	lszm
 连着	lszm
 连珠炮	lszp
-轮转	lszs
 轮轴	lszs
+轮转	lszs
 连轴	lszs
 连长	lszt
 轮子	lszv
@@ -61505,9 +61460,10 @@ GPRS	gprs
 利爪	ltiq
 乱转	ltis
 乱走	ltiu
-乱子	ltiv
 笼子	ltiv
 篮子	ltiv
+梨子	ltiv
+乱子	ltiv
 黎	ltj
 利己	ltjb
 立体交叉	ltjc
@@ -61655,10 +61611,10 @@ GPRS	gprs
 利爪	ltzq
 乱转	ltzs
 乱走	ltzu
-乱子	ltzv
 梨子	ltzv
 笼子	ltzv
 篮子	ltzv
+乱子	ltzv
 乱糟糟	ltzz
 临	lu
 垅	lu
@@ -61857,9 +61813,9 @@ GPRS	gprs
 辽足	lvii
 了之	lvil
 陆总	lvim
+隆中	lvio
 了账	lvio
 辽中	lvio
-隆中	lvio
 隆重	lvit
 脸肿	lviv
 陆战	lviy
@@ -61940,8 +61896,8 @@ GPRS	gprs
 腊味	lvwi
 了悟	lvwn
 脸相	lvxc
-辽西	lvxf
 陇西	lvxf
+辽西	lvxf
 脸型	lvxg
 陋习	lvxl
 隆兴	lvxn
@@ -61963,8 +61919,9 @@ GPRS	gprs
 辽足	lvzi
 了之	lvzl
 陆总	lvzm
-辽中	lvzo
 隆中	lvzo
+了账	lvzo
+辽中	lvzo
 隆重	lvzt
 脸肿	lvzv
 陆战	lvzy
@@ -62002,7 +61959,6 @@ GPRS	gprs
 乐都	lwdf
 狼毒	lwdg
 留底	lwdh
-乐得	lwdk
 留待	lwdk
 乐道	lwdm
 鲡	lwdo
@@ -62014,7 +61970,6 @@ GPRS	gprs
 里瓦尔多	lwed
 乐儿	lwew
 猎	lwf
-论文发表	lwfb
 留法	lwfd
 馏分	lwfm
 鳓	lwfn
@@ -62023,8 +61978,8 @@ GPRS	gprs
 留个	lwgj
 螺纹钢筋	lwgj
 乐观	lwgl
-乐果	lwgo
 乐购	lwgo
+乐果	lwgo
 狼狗	lwgw
 猎狗	lwgw
 留给	lwgx
@@ -62156,30 +62111,30 @@ GPRS	gprs
 遛弯	lwwh
 狼吻	lwwi
 狼窝	lwwn
-飗	lwwo
 馏	lwwo
+飗	lwwo
 猎物	lwwt
-卵细胞	lwxb
 鲁迅	lwxb
+卵细胞	lwxb
 留校	lwxc
 鲁迅	lwxc
 卵形	lwxg
-留下来	lwxl
 留心	lwxl
+留下来	lwxl
 留学	lwxn
 留学生	lwxs
 留香	lwxt
 留些	lwxy
 鲈	lwy
 留有	lwya
-狼牙棒	lwyb
-留言本	lwyb
 留言板	lwyb
 留言簿	lwyb
+留言本	lwyb
+狼牙棒	lwyb
 留洋	lwyd
 留英	lwye
-乐于	lwyg
 猎艳	lwyg
+乐于	lwyg
 乐意	lwyh
 留意	lwyh
 留言	lwyh
@@ -62187,17 +62142,15 @@ GPRS	gprs
 狼烟	lwym
 乐园	lwyo
 留影	lwyr
-狼牙山	lwys
 獠牙	lwys
+狼牙山	lwys
 留言条	lwyt
-乐业	lwyu
 留院	lwyv
-鲢鱼	lwyw
 鲤鱼	lwyw
+鲢鱼	lwyw
 乐悠悠	lwyy
 来无影去无踪	lwyz
 留在	lwza
-列为重点	lwzd
 留滞	lwzd
 留职	lwzf
 留足	lwzi
@@ -62238,7 +62191,6 @@ GPRS	gprs
 留校察看	lxck
 老羞成怒	lxcn
 缆车	lxcs
-陆续出台	lxct
 绿城	lxcu
 练出	lxcv
 骊	lxd
@@ -62262,22 +62214,15 @@ GPRS	gprs
 绿豆粥	lxdz
 绿矾	lxfa
 练法	lxfd
-路线方针	lxfi
 量小非君子	lxfi
 绿肥	lxfv
-良心发现	lxfx
-路线方针	lxfz
 量小非君子	lxfz
-离休干部	lxgb
 蠡沟	lxgd
-狼心狗肺	lxgf
 练功	lxgf
+狼心狗肺	lxgf
 驴肝肺	lxgf
 绿光	lxgj
-流行感冒	lxgm
-流行歌曲	lxgq
 例行公事	lxgs
-流行歌曲	lxgu
 流星赶月	lxgy
 缡	lxh
 龙行虎步	lxhb
@@ -62290,26 +62235,19 @@ GPRS	gprs
 练好	lxhs
 龙骧虎视	lxhs
 络合物	lxhw
-立下宏愿	lxhy
 绿枝	lxic
 绿洲	lxid
 绿藻	lxie
 绿装	lxih
-履行职责	lxii
 离弦之箭	lxij
-陆续展开	lxik
-良性肿瘤	lxil
 练字	lxin
 绿竹	lxit
 驴子	lxiv
-凉血止血	lxix
 纶	lxj
-例行检查	lxjc
 练就	lxjh
 令行禁止	lxji
 绿军装	lxji
 驴叫	lxji
-理想境界	lxjj
 练剑	lxjj
 纶	lxjw
 练级	lxjx
@@ -62321,7 +62259,6 @@ GPRS	gprs
 绿林	lxlc
 离心离德	lxld
 驴	lxle
-来信来访	lxlf
 绫罗	lxlo
 练练手	lxls
 缭乱	lxlt
@@ -118887,6 +118824,7 @@ QQ密码	qqmm
 抬轿子	tkjz
 探矿	tkka
 投考	tkkf
+推开	tkkg
 摊开	tkkg
 提款机	tkkj
 拓宽	tkkn
@@ -128159,7 +128097,6 @@ Z	vyz
 顽劣	wglp
 无量	wglr
 无论是	wgls
-无利	wglt
 无厘头	wglt
 未了	wglv
 王老五	wglw
@@ -132546,7 +132483,6 @@ Z	vyz
 洗胃	xdwo
 洵	xdwr
 消夏	xdxa
-汹汹	xdxd
 潇湘	xdxd
 潇潇	xdxd
 消协	xdxf
