--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -62228,8 +62228,8 @@ GPRS	gprs
 龙行虎步	lxhb
 绿化带	lxhd
 绿海	lxhd
-络合	lxhj
 绿化	lxhj
+络合	lxhj
 绿化率	lxhl
 缡	lxho
 练好	lxhs
@@ -62246,8 +62246,8 @@ GPRS	gprs
 纶	lxj
 练就	lxjh
 令行禁止	lxji
-绿军装	lxji
 驴叫	lxji
+绿军装	lxji
 练剑	lxjj
 纶	lxjw
 练级	lxjx
@@ -62939,9 +62939,9 @@ GPRS	gprs
 目不忍睹	mbrd
 民俗村	mbsc
 目不识丁	mbsd
+民事	mbsf
 弥散	mbsf
 明辨是非	mbsf
-民事	mbsf
 民商法	mbsf
 面壁思过	mbsg
 妙笔生花	mbsh
@@ -63101,8 +63101,8 @@ GPRS	gprs
 梦幻	mchx
 木质部	mcib
 芒刺在背	mcib
-木栅	mcic
 木桩	mcic
+木栅	mcic
 买者	mcif
 买主	mcih
 棉籽	mcim
@@ -63114,14 +63114,13 @@ GPRS	gprs
 木质素	mcis
 木制	mcit
 买走	mciu
-梅子	mciv
 模子	mciv
+梅子	mciv
 棉织	mcix
 木桌	mciy
 木屐	mcjb
 买进	mcjg
 木结构	mcjg
-木匠活	mcjh
 木浆	mcjh
 买价	mcjj
 木鸡	mcjl
@@ -63218,8 +63217,8 @@ GPRS	gprs
 买书	mcsx
 漫长岁月	mcsy
 梅	mct
-买套	mcta
 模态	mcta
+买套	mcta
 木桶	mctc
 木糖醇	mctc
 模特儿	mcte
@@ -63282,8 +63281,8 @@ GPRS	gprs
 木鱼	mcyw
 木质部	mczb
 芒刺在背	mczb
-木栅	mczc
 木桩	mczc
+木栅	mczc
 买者	mczf
 买主	mczh
 棉籽	mczm
@@ -63295,8 +63294,8 @@ GPRS	gprs
 木质素	mczs
 木制	mczt
 买走	mczu
-梅子	mczv
 模子	mczv
+梅子	mczv
 棉织	mczx
 木桌	mczy
 满	md
@@ -63475,9 +63474,8 @@ GPRS	gprs
 懑	mdlk
 汨罗	mdlo
 溟	mdlr
-没脸	mdlv
-满了	mdlv
 满脸	mdlv
+没脸	mdlv
 没留	mdlw
 灭	mdm
 渼	mdma
@@ -63486,8 +63484,8 @@ GPRS	gprs
 泯灭	mdmd
 满满	mdmd
 漫漫	mdmd
-没门儿	mdme
 渺茫	mdme
+没门儿	mdme
 漫骂	mdmi
 没命	mdmj
 洣	mdmk
@@ -63531,11 +63529,11 @@ GPRS	gprs
 没死	mdsa
 摩登时代	mdsd
 没事儿	mdse
-明断是非	mdsf
 没事	mdsf
+明断是非	mdsf
 没啥	mdsi
-孟德斯鸠	mdsj
 没时间	mdsj
+孟德斯鸠	mdsj
 满手	mdsk
 漠视	mdsl
 满室	mdsn
@@ -63543,16 +63541,15 @@ GPRS	gprs
 满山	mdso
 没少	mdsp
 满身	mdsr
-漫射	mdsr
 灭鼠	mdsr
+漫射	mdsr
 灭失	mdst
 没收	mdsv
-面对死亡	mdsw
 没书	mdsx
 漫滩	mdtd
 满天飞	mdtf
-满天	mdtg
 漫天	mdtg
+满天	mdtg
 满堂红	mdth
 没听	mdti
 面对挑战	mdti
@@ -63575,8 +63572,8 @@ GPRS	gprs
 浼	mdw
 满屋	mdwb
 漫无	mdwg
-满文	mdwh
 灭亡	mdwh
+满文	mdwh
 懵懂无知	mdwi
 洺	mdwi
 没问	mdwj
@@ -63585,13 +63582,11 @@ GPRS	gprs
 没问题	mdwt
 泖	mdwv
 浼	mdww
-面带微笑	mdwx
 懵懂无知	mdwz
 没想	mdxc
 没想到	mdxd
 没醒	mdxf
 满席	mdxh
-没心	mdxl
 没戏	mdxl
 满心	mdxl
 没羞	mdxm
@@ -63602,10 +63597,9 @@ GPRS	gprs
 没心思	mdxs
 没兴趣	mdxu
 没有	mdya
+漫游	mdyd
 沐浴	mdyd
 满意度	mdyd
-满溢	mdyd
-漫游	mdyd
 没药	mdye
 没要	mdyf
 漫游费	mdyf
@@ -63643,7 +63637,6 @@ GPRS	gprs
 满纸	mdzx
 满地找牙	mdzy
 满桌	mdzy
-满足于	mdzy
 灭顶之灾	mdzz
 么	me
 莫	me
@@ -63916,9 +63909,7 @@ GPRS	gprs
 卖场	mfcu
 卖出	mfcv
 某处	mfcw
-免费的午餐	mfdc
 酩酊	mfdf
-免费电话	mfdh
 卖得	mfdk
 某段	mfdr
 卖到	mfds
@@ -63960,7 +63951,6 @@ GPRS	gprs
 某甲	mfjo
 每逢佳节倍思亲	mfjq
 每逢佳节倍思亲	mfju
-免费空间	mfkj
 卖苦力	mfkl
 卖空	mfkn
 卖卡	mfky
@@ -63988,20 +63978,14 @@ GPRS	gprs
 某女	mfns
 马放南山	mfns
 某年	mfnt
-免费派发	mfpf
 卖票	mfpf
 卖盘	mfpq
 名副其实	mfqs
-酶切	mfqs
 卖钱	mfqy
 某人	mfrj
 卖肉	mfro
 鬘	mfro
 某日	mfrr
-模范人物	mfrw
-免费入学	mfrx
-买方市场	mfsc
-卖方市场	mfsc
 卖水	mfsd
 某事	mfsf
 某省	mfsp
@@ -64019,10 +64003,8 @@ GPRS	gprs
 卖铁	mfty
 民法通则	mftz
 名副其实	mfus
-酶切	mfus
 卖钱	mfuy
 酩	mfw
-免费午餐	mfwc
 酩	mfwi
 某位	mfwj
 卖完	mfwn
@@ -64031,19 +64013,15 @@ GPRS	gprs
 莫非王土	mfwt
 卖相	mfxc
 某项	mfxf
-免费下载	mfxi
 卖血	mfxr
 某些人	mfxr
 卖笑	mfxt
-免费信箱	mfxx
 某些	mfxy
-免费下载	mfxz
 某样	mfyc
 卖淫	mfyd
 卖药	mfye
 某一天	mfyt
 某月	mfyv
-免费邮箱	mfyx
 卖座	mfzh
 某只	mfzi
 某种	mfzt
@@ -64258,9 +64236,9 @@ GPRS	gprs
 磨耗	mhhg
 麻黄根	mhhg
 庙号	mhhi
-庙会	mhhj
-盲盒	mhhj
 磨合	mhhj
+盲盒	mhhj
+庙会	mhhj
 麻黄碱	mhhj
 磨合期	mhhq
 幕后黑手	mhhs
@@ -64273,6 +64251,7 @@ GPRS	gprs
 蛮荒之地	mhid
 麻醉	mhif
 美好祝福	mhif
+蛮族	mhih
 魔族	mhih
 麻疹	mhih
 明火执仗	mhii
@@ -64518,24 +64497,19 @@ GPRS	gprs
 鸣叫	miji
 骂街	mijk
 骂架	mijn
-民族精神	mijs
-民族教育	mijy
 鸣金	mijy
 骂架	mijz
 哞	mil
 谬种流传	milc
 猫捉老鼠	mils
 哞	milt
-昧着良心	milx
-某种联系	milx
-民族利益	mily
 鸣锣	mily
 咪	mim
 民族矛盾	mimd
 咩	mimg
 民脂民膏	mimg
-咩咩	mimi
 咪咪	mimi
+咩咩	mimi
 咪	mimk
 没着没落	miml
 喵喵喵	mimm
@@ -64936,7 +64910,6 @@ GPRS	gprs
 袂	mlbk
 名列榜首	mlbs
 马勒伯朗士	mlbs
-埋了八汰	mlbt
 谋臣	mlcf
 绵里藏针	mlci
 谬传	mlcj
@@ -64946,13 +64919,11 @@ GPRS	gprs
 绵里藏针	mlcz
 谜底	mldh
 谋得	mldk
-牟定	mldn
 谋定	mldn
 矛盾	mldq
 美丽动人	mldr
 矛盾体	mldt
 满脸堆笑	mldx
-美丽的谎言	mldy
 矛	mle
 矛	mlee
 谟	mler
@@ -64962,16 +64933,13 @@ GPRS	gprs
 谋福利	mlfl
 谋反	mlfq
 猛龙过江	mlgj
-埋了咕汰	mlgt
 冥	mlh
-茉莉花茶	mlhc
 描龙画凤	mlhf
 冥	mlhm
 谋害	mlhn
 满脸横肉	mlhr
 谋划	mlhs
 谋职	mlif
-马列著作	mlii
 弥留之际	mlij
 蟊贼	mlio
 牟宗三	mlis
@@ -65201,17 +65169,15 @@ GPRS	gprs
 眉毛胡子一把抓	mmhz
 迷魂阵	mmhz
 煤砖	mmia
-米粥	mmib
-美展	mmib
 美洲豹	mmib
 美洲	mmid
 明目张胆	mmid
 迷醉	mmif
 默默祝福	mmif
 美洲虎	mmih
+美滋滋	mmii
 冥冥之中	mmii
 密密匝匝	mmii
-美滋滋	mmii
 迷住	mmij
 面目狰狞	mmin
 美中	mmio
@@ -65320,15 +65286,14 @@ GPRS	gprs
 茫茫人海	mmrh
 貌美如花	mmrh
 美人	mmrj
+迷人	mmrj
 美人蕉	mmrj
 美人计	mmrj
-迷人	mmrj
 熳	mmrl
 美乳	mmrm
 美容	mmrn
 熳	mmro
 美日	mmrr
-美如	mmrs
 美容师	mmrs
 默默忍受	mmrs
 美容厅	mmrt
@@ -65355,8 +65320,8 @@ GPRS	gprs
 冒冒失失	mmss
 美式	mmss
 迷失	mmst
-孟母三迁	mmsu
 美声	mmsu
+孟母三迁	mmsu
 美色	mmsw
 迷上	mmsy
 美术字	mmsz
@@ -65369,7 +65334,6 @@ GPRS	gprs
 美谈	mmtl
 敉	mmtm
 煤炭	mmto
-秘密谈判	mmtp
 慢慢腾腾	mmtt
 美腿	mmtv
 名满天下	mmtx
@@ -65418,9 +65382,8 @@ GPRS	gprs
 美元	mmyg
 美玉	mmyg
 美艳	mmyg
-美言	mmyh
 美颜	mmyh
-密码验证	mmyi
+美言	mmyh
 美援	mmyk
 煤油炉	mmyl
 美语	mmyl
@@ -65434,10 +65397,7 @@ GPRS	gprs
 面目一新	mmyx
 面貌一新	mmyx
 慢慢悠悠	mmyy
-密码验证	mmyz
 煤砖	mmza
-米粥	mmzb
-美展	mmzb
 美洲豹	mmzb
 美洲	mmzd
 明目张胆	mmzd
@@ -65456,9 +65416,9 @@ GPRS	gprs
 迷走	mmzu
 迷阵	mmzv
 靡靡之音	mmzy
+美滋滋	mmzz
 冥冥之中	mmzz
 密密匝匝	mmzz
-美滋滋	mmzz
 忙	mn
 慢	mn
 密	mn
@@ -65484,7 +65444,6 @@ GPRS	gprs
 忙得	mndk
 慢待	mndk
 慢得	mndk
-密电码	mndm
 懵懂	mndn
 密电	mndo
 慢的	mndr
@@ -65494,13 +65453,9 @@ GPRS	gprs
 懵	mne
 懵	mneo
 寞	mner
-母女二人	mner
 密封圈	mnfj
 蜜蜂	mnfo
-卖弄风情	mnfq
 密封圈	mnfq
-卖弄风骚	mnfs
-卖弄风情	mnfu
 密封	mnfu
 密封圈	mnfu
 蜜柑	mngc
@@ -65661,9 +65616,9 @@ GPRS	gprs
 皿	mod
 目的地	modd
 冒顶	modf
-墨翟	modl
-目的论	modl
 默读	modl
+目的论	modl
+墨翟	modl
 墨斗	modn
 目睹	modo
 目的	modr
@@ -65767,8 +65722,8 @@ GPRS	gprs
 默诵	mosl
 目送	mosm
 墨守	mosn
-岷山	moso
 蟒蛇	moso
+岷山	moso
 墨水屏	mosp
 冒失	most
 墨色	mosw
@@ -65806,8 +65761,8 @@ GPRS	gprs
 冒雨	moyf
 墨玉	moyg
 冒烟	moym
-眯眼	moyo
 蚂蚁	moyo
+眯眼	moyo
 目翳	moys
 冒用	moyw
 墨汁	mozd
@@ -65883,7 +65838,6 @@ GPRS	gprs
 明代	mrdj
 明德	mrdk
 曼德拉	mrdl
-明断	mrdm
 明灯	mrdm
 明电	mrdo
 明点	mrdy
@@ -66323,8 +66277,8 @@ GPRS	gprs
 每周	mtiw
 每组	mtix
 毛主席	mtix
-秒针	mtiy
 秒钟	mtiy
+秒针	mtiy
 每届	mtjb
 毛巾被	mtjb
 每节	mtje
@@ -66423,8 +66377,8 @@ GPRS	gprs
 秘书科	mtsk
 慢条斯理	mtsl
 穆斯林	mtsl
-每首	mtsm
 秒杀	mtsm
+每首	mtsm
 秘室	mtsn
 秘史	mtso
 牧师	mtsp
@@ -66526,8 +66480,8 @@ GPRS	gprs
 每周	mtzw
 每组	mtzx
 毛主席	mtzx
-秒针	mtzy
 秒钟	mtzy
+秒针	mtzy
 埋	mu
 明枪暗箭	muaj
 牟取暴利	mubl
@@ -66706,10 +66660,9 @@ GPRS	gprs
 迷雾重重	mwcc
 名菜	mwce
 名臣	mwcf
-名产	mwch
 名次	mwch
 猛冲	mwch
-贸促会	mwch
+名产	mwch
 猛吃	mwci
 名词	mwcl
 名刹	mwcm
@@ -66779,11 +66732,11 @@ GPRS	gprs
 名酒	mwjd
 名节	mwje
 名教	mwjf
-免进	mwjg
 猛击	mwjg
-免交	mwjh
+免进	mwjg
 名将	mwjh
 猛将	mwjh
+免交	mwjh
 名叫	mwji
 名剑	mwjj
 猛劲	mwjl
@@ -66797,8 +66750,8 @@ GPRS	gprs
 免考	mwkf
 美味可口	mwkk
 猫科	mwkt
-勉励	mwla
 猛烈	mwla
+勉励	mwla
 名录	mwlb
 名利场	mwlc
 名流	mwld
@@ -67103,23 +67056,19 @@ GPRS	gprs
 绵	mxr
 缦	mxrl
 母乳	mxrm
-缦	mxro
 马肉	mxro
+缦	mxro
 绵软	mxrs
 马术	mxsc
 马绍尔	mxse
 缪斯	mxsf
-木樨柿子	mxsi
 马嘶	mxsi
 马斯克	mxsk
 马赛克	mxsk
 马斯洛	mxsl
 目眩神迷	mxsm
 马赛	mxsn
-某些事情	mxsq
 马赛曲	mxsq
-慢性肾衰	mxss
-某些事情	mxsu
 马赛曲	mxsu
 母狮	mxsw
 马上	mxsy
@@ -67134,7 +67083,6 @@ GPRS	gprs
 马蹄声	mxts
 马蹄形	mxtx
 马群	mxub
-没想清楚	mxuc
 马枪	mxuc
 马其顿	mxud
 马球	mxug
